--- a/src/Styles/CVPreview/WorkExperience.css
+++ b/src/Styles/CVPreview/WorkExperience.css
@@ -3,11 +3,16 @@
   flex-direction: column;
 }
 
+#work-experience > h4 {
+  margin: 10px 0px;
+}
+
 .work-experience-item {
-  height: 20vh;
+  height: fit-content;
   display: grid;
   grid-template-rows: 1fr 1fr 3fr;
   grid-template-columns: 1fr 1fr;
+  margin: 10px 0px;
 }
 
 .work-experience-item > * {
